// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`command-line checker reports a compact empty module 1`] = `
"test/fixtures/compact-empty-module.qnt:1:16: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker reports a missing module brace at end of file 1`] = `
"test/fixtures/missing-module-brace.qnt:2:1: error[parse/missing-token]: expected '}'
  |
2 |
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical spacing after the module keyword 1`] = `
"test/fixtures/module-keyword-spacing.qnt:1:7: error[format/module-keyword-spacing]: expected one space after 'module'
  |
1 | module   Example {
  |       ^^^
  |
"
`;

exports[`command-line checker reports missing spacing before the module brace 1`] = `
"test/fixtures/module-brace-spacing.qnt:1:15: error[format/module-brace-spacing]: expected one space before '{'
  |
1 | module Example{
  |               ^
  |
"
`;

exports[`command-line checker reports an excess final newline 1`] = `
"extra-final-newline.qnt:3:1: error[format/final-newline]: expected exactly one final newline
  |
3 |
  | ^
  |
"
`;

exports[`command-line checker reports an unindented module declaration 1`] = `
"test/fixtures/variable-indentation.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | var n: int
  | ^
  |
"
`;

exports[`command-line checker reports missing spacing after a type colon 1`] = `
"test/fixtures/type-colon-spacing.qnt:2:9: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   var n:int
  |         ^
  |
"
`;

exports[`command-line checker reports whitespace before a type colon 1`] = `
"test/fixtures/before-type-colon.qnt:2:8: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   var n : int
  |        ^
  |
"
`;

exports[`command-line checker reports noncanonical spacing after var 1`] = `
"test/fixtures/variable-keyword-spacing.qnt:2:6: error[format/declaration-keyword-spacing]: expected one space after 'var'
  |
2 |   var   n: int
  |      ^^^
  |
"
`;

exports[`command-line checker reports an unindented constant declaration 1`] = `
"test/fixtures/constant-declaration.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const N: int
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical Set-type formatting 1`] = `
"test/fixtures/set-type.qnt:2:16: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const Values:Set[ int ]
  |                ^
  |
test/fixtures/set-type.qnt:2:20: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   const Values:Set[ int ]
  |                    ^
  |
test/fixtures/set-type.qnt:2:24: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   const Values:Set[ int ]
  |                        ^
  |
"
`;

exports[`command-line checker reports noncanonical tuple-type formatting 1`] = `
"test/fixtures/tuple-type.qnt:2:14: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const Pair:( int ,str )
  |              ^
  |
test/fixtures/tuple-type.qnt:2:15: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   const Pair:( int ,str )
  |               ^
  |
test/fixtures/tuple-type.qnt:2:20: error[format/type-separator-spacing]: expected ', ' between types
  |
2 |   const Pair:( int ,str )
  |                    ^
  |
test/fixtures/tuple-type.qnt:2:24: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   const Pair:( int ,str )
  |                        ^
  |
"
`;

exports[`command-line checker reports noncanonical record-type formatting 1`] = `
"test/fixtures/record-type.qnt:2:14: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const User:{ name: str,active:bool }
  |              ^
  |
test/fixtures/record-type.qnt:2:25: error[format/type-separator-spacing]: expected ', ' between record fields
  |
2 |   const User:{ name: str,active:bool }
  |                         ^
  |
test/fixtures/record-type.qnt:2:33: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const User:{ name: str,active:bool }
  |                                 ^
  |
"
`;

exports[`command-line checker reports noncanonical open-record-type formatting 1`] = `
"test/fixtures/open-record-type.qnt:2:14: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const User:{ name: str|r }
  |              ^
  |
test/fixtures/open-record-type.qnt:2:25: error[format/record-row-spacing]: expected one space around '|'
  |
2 |   const User:{ name: str|r }
  |                         ^
  |
"
`;

exports[`command-line checker reports noncanonical function-type formatting 1`] = `
"test/fixtures/function-type.qnt:2:16: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const mapper:int->str
  |                ^
  |
test/fixtures/function-type.qnt:2:19: error[format/type-operator-spacing]: expected one space around '->'
  |
2 |   const mapper:int->str
  |                   ^^
  |
"
`;

exports[`command-line checker reports noncanonical operator-type formatting 1`] = `
"test/fixtures/operator-type.qnt:2:19: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const predicate:( int ,str )=>bool
  |                   ^
  |
test/fixtures/operator-type.qnt:2:20: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   const predicate:( int ,str )=>bool
  |                    ^
  |
test/fixtures/operator-type.qnt:2:25: error[format/type-separator-spacing]: expected ', ' between types
  |
2 |   const predicate:( int ,str )=>bool
  |                         ^
  |
test/fixtures/operator-type.qnt:2:29: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   const predicate:( int ,str )=>bool
  |                             ^
  |
test/fixtures/operator-type.qnt:2:31: error[format/type-operator-spacing]: expected one space around '=>'
  |
2 |   const predicate:( int ,str )=>bool
  |                               ^^
  |
"
`;

exports[`command-line checker reports noncanonical zero-parameter-operator-type formatting 1`] = `
"test/fixtures/zero-parameter-operator-type.qnt:2:17: error[format/type-delimiter-spacing]: expected no space inside '()'
  |
2 |   const thunk: ( ) => bool
  |                 ^
  |
"
`;

exports[`command-line checker reports noncanonical direct-operator-type formatting 1`] = `
"test/fixtures/direct-operator-type.qnt:2:19: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   const predicate:int=>bool
  |                   ^
  |
test/fixtures/direct-operator-type.qnt:2:22: error[format/type-operator-spacing]: expected one space around '=>'
  |
2 |   const predicate:int=>bool
  |                      ^^
  |
"
`;

exports[`command-line checker reports noncanonical parenthesized-type formatting 1`] = `
"test/fixtures/parenthesized-type.qnt:2:18: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   const values: ( Set[ int ] )
  |                  ^
  |
test/fixtures/parenthesized-type.qnt:2:23: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   const values: ( Set[ int ] )
  |                       ^
  |
test/fixtures/parenthesized-type.qnt:2:27: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   const values: ( Set[ int ] )
  |                           ^
  |
test/fixtures/parenthesized-type.qnt:2:29: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   const values: ( Set[ int ] )
  |                             ^
  |
"
`;

exports[`command-line checker reports noncanonical unit-type formatting 1`] = `
"test/fixtures/unit-type.qnt:2:17: error[format/type-delimiter-spacing]: expected no space inside '()'
  |
2 |   const empty: ( )
  |                 ^
  |
"
`;

exports[`command-line checker reports adjacent declarations on the same line 1`] = `
"test/fixtures/declaration-line-break.qnt:2:15: error[format/declaration-line-break]: expected each declaration on a separate line
  |
2 |   var a: int  var b: int
  |               ^^^
  |
"
`;

exports[`command-line checker reports an unindented assumption 1`] = `
"test/fixtures/assumption-declaration.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | assume Safe = true
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical spacing around assumption equals 1`] = `
"test/fixtures/assumption-equals-spacing.qnt:2:14: error[format/equals-spacing]: expected one space around '='
  |
2 |   assume Safe=true
  |              ^
  |
"
`;

exports[`command-line checker reports an unindented integer value definition 1`] = `
"test/fixtures/value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val answer = 42
  | ^
  |
"
`;

exports[`command-line checker reports an optional value semicolon 1`] = `
"test/fixtures/value-semicolon.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   val answer=42;
  |             ^
  |
test/fixtures/value-semicolon.qnt:2:16: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
2 |   val answer=42;
  |                ^
  |
"
`;

exports[`command-line checker reports an unindented Boolean value definition 1`] = `
"test/fixtures/boolean-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val ready = true
  | ^
  |
"
`;

exports[`command-line checker reports an unindented string value definition 1`] = `
"test/fixtures/string-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val greeting = "hello"
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical typed value formatting 1`] = `
"test/fixtures/typed-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val answer:int=42
  | ^
  |
test/fixtures/typed-value-definition.qnt:2:12: error[format/type-colon-spacing]: expected one space after ':'
  |
2 | val answer:int=42
  |            ^
  |
test/fixtures/typed-value-definition.qnt:2:15: error[format/equals-spacing]: expected one space around '='
  |
2 | val answer:int=42
  |               ^
  |
"
`;

exports[`command-line checker reports noncanonical addition formatting 1`] = `
"test/fixtures/addition-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val total=1+2
  | ^
  |
test/fixtures/addition-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val total=1+2
  |          ^
  |
test/fixtures/addition-expression.qnt:2:12: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 | val total=1+2
  |            ^
  |
"
`;

exports[`command-line checker reports noncanonical identifier value formatting 1`] = `
"test/fixtures/identifier-value-definition.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | const source: int
  | ^
  |
test/fixtures/identifier-value-definition.qnt:3:1: error[format/definition-spacing]: expected one blank line between definitions
  |
3 | val copy=source
  | ^^^
  |
test/fixtures/identifier-value-definition.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val copy=source
  | ^
  |
test/fixtures/identifier-value-definition.qnt:3:9: error[format/equals-spacing]: expected one space around '='
  |
3 | val copy=source
  |         ^
  |
"
`;

exports[`command-line checker reports noncanonical unit-literal formatting 1`] = `
"test/fixtures/unit-literal.qnt:2:16: error[format/expression-delimiter-spacing]: expected no space inside '()'
  |
2 |   val empty = ( )
  |                ^
  |
"
`;

exports[`command-line checker reports noncanonical list-literal formatting 1`] = `
"test/fixtures/list-literal.qnt:2:17: error[format/expression-delimiter-spacing]: expected no space after '['
  |
2 |   val values = [ 1 ,2, ]
  |                 ^
  |
test/fixtures/list-literal.qnt:2:20: error[format/expression-separator-spacing]: expected ', ' between list elements
  |
2 |   val values = [ 1 ,2, ]
  |                    ^
  |
test/fixtures/list-literal.qnt:2:22: error[format/unnecessary-trailing-comma]: trailing commas are omitted from inline lists
  |
2 |   val values = [ 1 ,2, ]
  |                      ^
  |
test/fixtures/list-literal.qnt:2:23: error[format/expression-delimiter-spacing]: expected no space before ']'
  |
2 |   val values = [ 1 ,2, ]
  |                       ^
  |
"
`;

exports[`command-line checker reports noncanonical tuple-literal formatting 1`] = `
"test/fixtures/tuple-literal.qnt:2:15: error[format/expression-delimiter-spacing]: expected no space after '('
  |
2 |   val pair = ( 1 ,2, )
  |               ^
  |
test/fixtures/tuple-literal.qnt:2:18: error[format/expression-separator-spacing]: expected ', ' between tuple elements
  |
2 |   val pair = ( 1 ,2, )
  |                  ^
  |
test/fixtures/tuple-literal.qnt:2:20: error[format/unnecessary-trailing-comma]: trailing commas are omitted from inline tuples
  |
2 |   val pair = ( 1 ,2, )
  |                    ^
  |
test/fixtures/tuple-literal.qnt:2:21: error[format/expression-delimiter-spacing]: expected no space before ')'
  |
2 |   val pair = ( 1 ,2, )
  |                     ^
  |
"
`;

exports[`command-line checker reports noncanonical record-literal formatting 1`] = `
"test/fixtures/record-literal.qnt:2:15: error[format/expression-delimiter-spacing]: expected one space after '{'
  |
2 |   val user = {name :"Alice" ,age:42, }
  |               ^
  |
test/fixtures/record-literal.qnt:2:19: error[format/expression-colon-spacing]: expected no space before ':'
  |
2 |   val user = {name :"Alice" ,age:42, }
  |                   ^
  |
test/fixtures/record-literal.qnt:2:21: error[format/expression-colon-spacing]: expected one space after ':'
  |
2 |   val user = {name :"Alice" ,age:42, }
  |                     ^
  |
test/fixtures/record-literal.qnt:2:29: error[format/expression-separator-spacing]: expected ', ' between record fields
  |
2 |   val user = {name :"Alice" ,age:42, }
  |                             ^
  |
test/fixtures/record-literal.qnt:2:34: error[format/expression-colon-spacing]: expected one space after ':'
  |
2 |   val user = {name :"Alice" ,age:42, }
  |                                  ^
  |
test/fixtures/record-literal.qnt:2:36: error[format/unnecessary-trailing-comma]: trailing commas are omitted from inline records
  |
2 |   val user = {name :"Alice" ,age:42, }
  |                                    ^
  |
"
`;

exports[`command-line checker reports noncanonical record-spread formatting 1`] = `
"test/fixtures/record-spread.qnt:2:19: error[format/expression-delimiter-spacing]: expected one space after '{'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                   ^
  |
test/fixtures/record-spread.qnt:2:21: error[format/expression-colon-spacing]: expected one space after ':'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                     ^
  |
test/fixtures/record-spread.qnt:2:23: error[format/expression-separator-spacing]: expected ', ' between record elements
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                       ^
  |
test/fixtures/record-spread.qnt:2:27: error[format/record-spread-spacing]: expected no space after '...'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                           ^
  |
test/fixtures/record-spread.qnt:2:29: error[format/expression-delimiter-spacing]: expected one space after '{'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                             ^
  |
test/fixtures/record-spread.qnt:2:31: error[format/expression-colon-spacing]: expected one space after ':'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                               ^
  |
test/fixtures/record-spread.qnt:2:32: error[format/expression-delimiter-spacing]: expected one space before '}'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                                ^
  |
test/fixtures/record-spread.qnt:2:33: error[format/expression-delimiter-spacing]: expected one space before '}'
  |
2 |   val extended = {b:2 ,... {a:1}}
  |                                 ^
  |
"
`;

exports[`command-line checker reports noncanonical tuple-pattern formatting 1`] = `
"test/fixtures/tuple-pattern.qnt:2:13: error[format/pattern-delimiter-spacing]: expected no space after '('
  |
2 |   pure val ( first ,_ ) = (1, 2)
  |             ^
  |
test/fixtures/tuple-pattern.qnt:2:20: error[format/pattern-separator-spacing]: expected ', ' between pattern elements
  |
2 |   pure val ( first ,_ ) = (1, 2)
  |                    ^
  |
test/fixtures/tuple-pattern.qnt:2:22: error[format/pattern-delimiter-spacing]: expected no space before ')'
  |
2 |   pure val ( first ,_ ) = (1, 2)
  |                      ^
  |
"
`;

exports[`command-line checker reports noncanonical record-pattern formatting 1`] = `
"test/fixtures/record-pattern.qnt:2:13: error[format/pattern-delimiter-spacing]: expected one space after '{'
  |
2 |   pure val {first ,second} = { first: 1, second: 2 }
  |             ^
  |
test/fixtures/record-pattern.qnt:2:19: error[format/pattern-separator-spacing]: expected ', ' between pattern fields
  |
2 |   pure val {first ,second} = { first: 1, second: 2 }
  |                   ^
  |
test/fixtures/record-pattern.qnt:2:26: error[format/pattern-delimiter-spacing]: expected one space before '}'
  |
2 |   pure val {first ,second} = { first: 1, second: 2 }
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical call-expression formatting 1`] = `
"test/fixtures/call-expression.qnt:2:20: error[format/call-delimiter-spacing]: expected no space after '('
  |
2 |   val values = Set( 1 ,2, )
  |                    ^
  |
test/fixtures/call-expression.qnt:2:23: error[format/argument-separator-spacing]: expected ', ' between arguments
  |
2 |   val values = Set( 1 ,2, )
  |                       ^
  |
test/fixtures/call-expression.qnt:2:25: error[format/unnecessary-trailing-comma]: trailing commas are omitted from inline calls
  |
2 |   val values = Set( 1 ,2, )
  |                         ^
  |
test/fixtures/call-expression.qnt:2:26: error[format/call-delimiter-spacing]: expected no space before ')'
  |
2 |   val values = Set( 1 ,2, )
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical UFCS-call formatting 1`] = `
"test/fixtures/ufcs-call.qnt:2:27: error[format/call-delimiter-spacing]: expected no space inside '()'
  |
2 |   val count = Set(1).size( )
  |                           ^
  |
"
`;

exports[`command-line checker reports noncanonical index-expression formatting 1`] = `
"test/fixtures/index-expression.qnt:2:26: error[format/index-delimiter-spacing]: expected no space after '['
  |
2 |   val first = List(1, 2)[ 0 ]
  |                          ^
  |
test/fixtures/index-expression.qnt:2:28: error[format/index-delimiter-spacing]: expected no space before ']'
  |
2 |   val first = List(1, 2)[ 0 ]
  |                            ^
  |
"
`;

exports[`command-line checker reports noncanonical field-access formatting 1`] = `
"test/fixtures/field-access.qnt:2:29: error[format/field-access-spacing]: expected no space around '.'
  |
2 |   val answer = { value: 1 } . value
  |                             ^
  |
"
`;

exports[`command-line checker reports noncanonical unary-expression formatting 1`] = `
"test/fixtures/unary-expression.qnt:2:19: error[format/unary-operator-spacing]: expected no space after '-'
  |
2 |   val negative = - 42
  |                   ^
  |
"
`;

exports[`command-line checker reports noncanonical multiplication formatting 1`] = `
"test/fixtures/multiplication-expression.qnt:2:23: error[format/binary-operator-spacing]: expected one space around '*'
  |
2 |   pure val product = 2*3
  |                       ^
  |
"
`;

exports[`command-line checker reports noncanonical lambda formatting 1`] = `
"test/fixtures/lambda-check.qnt:2:19: error[format/lambda-parameter-list-spacing]: expected no space after '('
  |
2 |   pure val add = ( x ,y )=>x + y
  |                   ^
  |
test/fixtures/lambda-check.qnt:2:22: error[format/lambda-parameter-separator-spacing]: expected ', ' between parameters
  |
2 |   pure val add = ( x ,y )=>x + y
  |                      ^
  |
test/fixtures/lambda-check.qnt:2:24: error[format/lambda-parameter-list-spacing]: expected no space before ')'
  |
2 |   pure val add = ( x ,y )=>x + y
  |                        ^
  |
test/fixtures/lambda-check.qnt:2:26: error[format/lambda-arrow-spacing]: expected one space around '=>'
  |
2 |   pure val add = ( x ,y )=>x + y
  |                          ^^
  |
"
`;

exports[`command-line checker reports noncanonical conditional formatting 1`] = `
"test/fixtures/conditional-expression.qnt:2:23: error[format/conditional-keyword-spacing]: expected one space after 'if'
  |
2 |   pure val answer = if( true )1  else  2
  |                       ^
  |
test/fixtures/conditional-expression.qnt:2:24: error[format/conditional-delimiter-spacing]: expected no space after '('
  |
2 |   pure val answer = if( true )1  else  2
  |                        ^
  |
test/fixtures/conditional-expression.qnt:2:29: error[format/conditional-delimiter-spacing]: expected no space before ')'
  |
2 |   pure val answer = if( true )1  else  2
  |                             ^
  |
test/fixtures/conditional-expression.qnt:2:31: error[format/conditional-branch-spacing]: expected one space after ')'
  |
2 |   pure val answer = if( true )1  else  2
  |                               ^
  |
test/fixtures/conditional-expression.qnt:2:34: error[format/conditional-else-spacing]: expected one space around 'else'
  |
2 |   pure val answer = if( true )1  else  2
  |                                  ^^^^
  |
"
`;

exports[`command-line checker reports noncanonical match-arm formatting 1`] = `
"test/fixtures/match-check.qnt:5:12: error[format/match-pattern-spacing]: expected no space after '('
  |
5 |     | Some( x )=>x
  |            ^
  |
test/fixtures/match-check.qnt:5:14: error[format/match-pattern-spacing]: expected no space before ')'
  |
5 |     | Some( x )=>x
  |              ^
  |
test/fixtures/match-check.qnt:5:16: error[format/match-arrow-spacing]: expected one space around '=>'
  |
5 |     | Some( x )=>x
  |                ^^
  |
"
`;

exports[`command-line checker reports an inline match layout 1`] = `
"test/fixtures/match-expression.qnt:4:56: error[format/match-layout]: expected match arms and the closing brace on separate lines
  |
4 |   pure def getOrZero(value: Option): int = match value {Some(x)=>x|None=>0|_=>0}
  |                                                        ^
  |
test/fixtures/match-expression.qnt:4:64: error[format/match-arrow-spacing]: expected one space around '=>'
  |
4 |   pure def getOrZero(value: Option): int = match value {Some(x)=>x|None=>0|_=>0}
  |                                                                ^^
  |
test/fixtures/match-expression.qnt:4:72: error[format/match-arrow-spacing]: expected one space around '=>'
  |
4 |   pure def getOrZero(value: Option): int = match value {Some(x)=>x|None=>0|_=>0}
  |                                                                        ^^
  |
test/fixtures/match-expression.qnt:4:77: error[format/match-arrow-spacing]: expected one space around '=>'
  |
4 |   pure def getOrZero(value: Option): int = match value {Some(x)=>x|None=>0|_=>0}
  |                                                                             ^^
  |
"
`;

exports[`command-line checker reports noncanonical namespace-access formatting 1`] = `
"test/fixtures/namespace-access.qnt:2:27: error[format/namespace-access-spacing]: expected no space around '::'
  |
2 |   pure val apply = (Scope :: x)=>Scope :: x
  |                           ^^
  |
test/fixtures/namespace-access.qnt:2:32: error[format/lambda-arrow-spacing]: expected one space around '=>'
  |
2 |   pure val apply = (Scope :: x)=>Scope :: x
  |                                ^^
  |
test/fixtures/namespace-access.qnt:2:40: error[format/namespace-access-spacing]: expected no space around '::'
  |
2 |   pure val apply = (Scope :: x)=>Scope :: x
  |                                        ^^
  |
"
`;

exports[`command-line checker reports noncanonical primed-assignment formatting 1`] = `
"test/fixtures/primed-assignment.qnt:4:27: error[format/prime-spacing]: expected no space before "'"
  |
4 |   action increment = count '  =count + 1
  |                           ^
  |
test/fixtures/primed-assignment.qnt:4:31: error[format/assignment-spacing]: expected one space around '='
  |
4 |   action increment = count '  =count + 1
  |                               ^
  |
"
`;

exports[`command-line checker reports an inline ordinary block 1`] = `
"test/fixtures/block-expression.qnt:4:23: error[format/block-layout]: expected block contents and the closing brace on separate lines
  |
4 |   action initialize = {count' = 0}
  |                       ^
  |
"
`;

exports[`command-line checker reports noncanonical block-combinator formatting 1`] = `
"test/fixtures/and-block.qnt:2:23: error[format/block-combinator-layout]: expected choices and the closing brace on separate lines
  |
2 |   pure val both = and {true ,false}
  |                       ^
  |
test/fixtures/and-block.qnt:2:29: error[format/block-combinator-separator-spacing]: expected no space before ','
  |
2 |   pure val both = and {true ,false}
  |                             ^
  |
"
`;

exports[`command-line checker reports noncanonical nondet-binding formatting 1`] = `
"test/fixtures/nondet-binding.qnt:5:11: error[format/nondet-binding-spacing]: expected one space after 'nondet'
  |
5 |     nondet  choice=Set(1, 2).oneOf()
  |           ^^
  |
test/fixtures/nondet-binding.qnt:5:19: error[format/nondet-binding-spacing]: expected one space around '='
  |
5 |     nondet  choice=Set(1, 2).oneOf()
  |                   ^
  |
"
`;

exports[`command-line checker reports noncanonical nested-definition formatting 1`] = `
"test/fixtures/nested-definitions.qnt:3:9: error[format/qualifier-spacing]: expected one space after 'pure'
  |
3 |     pure   val doubled:int=value * 2;
  |         ^^^
  |
test/fixtures/nested-definitions.qnt:3:23: error[format/type-colon-spacing]: expected ': ' before the definition type
  |
3 |     pure   val doubled:int=value * 2;
  |                       ^
  |
test/fixtures/nested-definitions.qnt:3:27: error[format/equals-spacing]: expected one space around '='
  |
3 |     pure   val doubled:int=value * 2;
  |                           ^
  |
test/fixtures/nested-definitions.qnt:3:37: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
3 |     pure   val doubled:int=value * 2;
  |                                     ^
  |
test/fixtures/nested-definitions.qnt:4:9: error[format/qualifier-spacing]: expected one space after 'pure'
  |
4 |     pure   def increment(number: int): int=number + 1;
  |         ^^^
  |
test/fixtures/nested-definitions.qnt:4:43: error[format/equals-spacing]: expected one space around '='
  |
4 |     pure   def increment(number: int): int=number + 1;
  |                                           ^
  |
test/fixtures/nested-definitions.qnt:4:54: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
4 |     pure   def increment(number: int): int=number + 1;
  |                                                      ^
  |
"
`;

exports[`command-line checker reports noncanonical named and wildcard imports and exports 1`] = `
"test/fixtures/imports-exports.qnt:4:1: error[format/module-separation]: expected one blank line between modules
  |
4 | module Consumer {
  | ^^^^^^
  |
test/fixtures/imports-exports.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 |  import   Library
  | ^
  |
test/fixtures/imports-exports.qnt:5:8: error[format/declaration-keyword-spacing]: expected one space after 'import'
  |
5 |  import   Library
  |        ^^^
  |
test/fixtures/imports-exports.qnt:6:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
6 |  import Library  as   Lib
  | ^
  |
test/fixtures/imports-exports.qnt:6:2: error[format/definition-spacing]: expected one blank line between definitions
  |
6 |  import Library  as   Lib
  |  ^^^^^^
  |
test/fixtures/imports-exports.qnt:6:18: error[format/import-alias-spacing]: expected one space around 'as'
  |
6 |  import Library  as   Lib
  |                  ^^
  |
test/fixtures/imports-exports.qnt:7:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
7 |  import Library . value
  | ^
  |
test/fixtures/imports-exports.qnt:7:2: error[format/definition-spacing]: expected one blank line between definitions
  |
7 |  import Library . value
  |  ^^^^^^
  |
test/fixtures/imports-exports.qnt:7:17: error[format/import-selector-spacing]: expected no space around '.'
  |
7 |  import Library . value
  |                 ^
  |
test/fixtures/imports-exports.qnt:8:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
8 |  import Library . *
  | ^
  |
test/fixtures/imports-exports.qnt:8:2: error[format/definition-spacing]: expected one blank line between definitions
  |
8 |  import Library . *
  |  ^^^^^^
  |
test/fixtures/imports-exports.qnt:8:17: error[format/import-selector-spacing]: expected no space around '.'
  |
8 |  import Library . *
  |                 ^
  |
test/fixtures/imports-exports.qnt:9:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
9 |  export  Library
  | ^
  |
test/fixtures/imports-exports.qnt:9:2: error[format/definition-spacing]: expected one blank line between definitions
  |
9 |  export  Library
  |  ^^^^^^
  |
test/fixtures/imports-exports.qnt:9:8: error[format/declaration-keyword-spacing]: expected one space after 'export'
  |
9 |  export  Library
  |        ^^
  |
test/fixtures/imports-exports.qnt:10:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
10 |  export Library  as   Public
   | ^
   |
test/fixtures/imports-exports.qnt:10:2: error[format/definition-spacing]: expected one blank line between definitions
   |
10 |  export Library  as   Public
   |  ^^^^^^
   |
test/fixtures/imports-exports.qnt:10:18: error[format/import-alias-spacing]: expected one space around 'as'
   |
10 |  export Library  as   Public
   |                  ^^
   |
test/fixtures/imports-exports.qnt:11:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
11 |  export Library . value
   | ^
   |
test/fixtures/imports-exports.qnt:11:2: error[format/definition-spacing]: expected one blank line between definitions
   |
11 |  export Library . value
   |  ^^^^^^
   |
test/fixtures/imports-exports.qnt:11:17: error[format/import-selector-spacing]: expected no space around '.'
   |
11 |  export Library . value
   |                 ^
   |
test/fixtures/imports-exports.qnt:12:1: error[format/module-body-indentation]: expected 2 spaces of indentation
   |
12 |  export Library . *
   | ^
   |
test/fixtures/imports-exports.qnt:12:2: error[format/definition-spacing]: expected one blank line between definitions
   |
12 |  export Library . *
   |  ^^^^^^
   |
test/fixtures/imports-exports.qnt:12:17: error[format/import-selector-spacing]: expected no space around '.'
   |
12 |  export Library . *
   |                 ^
   |
"
`;

exports[`command-line checker reports noncanonical source-qualified imports 1`] = `
"test/fixtures/source-imports.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 |  import Library   from   "./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:2:19: error[format/import-source-spacing]: expected one space around 'from'
  |
2 |  import Library   from   "./quint-format-source-library"
  |                   ^^^^
  |
test/fixtures/source-imports.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 |  import Library . value from"./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:3:2: error[format/definition-spacing]: expected one blank line between definitions
  |
3 |  import Library . value from"./quint-format-source-library"
  |  ^^^^^^
  |
test/fixtures/source-imports.qnt:3:17: error[format/import-selector-spacing]: expected no space around '.'
  |
3 |  import Library . value from"./quint-format-source-library"
  |                 ^
  |
test/fixtures/source-imports.qnt:3:25: error[format/import-source-spacing]: expected one space around 'from'
  |
3 |  import Library . value from"./quint-format-source-library"
  |                         ^^^^
  |
test/fixtures/source-imports.qnt:4:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
4 |  import Library . *  from  "./quint-format-source-library"
  | ^
  |
test/fixtures/source-imports.qnt:4:2: error[format/definition-spacing]: expected one blank line between definitions
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |  ^^^^^^
  |
test/fixtures/source-imports.qnt:4:17: error[format/import-selector-spacing]: expected no space around '.'
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |                 ^
  |
test/fixtures/source-imports.qnt:4:22: error[format/import-source-spacing]: expected one space around 'from'
  |
4 |  import Library . *  from  "./quint-format-source-library"
  |                      ^^^^
  |
"
`;

exports[`command-line checker reports noncanonical parenthesized expression formatting 1`] = `
"test/fixtures/parenthesized-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val total=(1+2)
  | ^
  |
test/fixtures/parenthesized-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val total=(1+2)
  |          ^
  |
test/fixtures/parenthesized-expression.qnt:2:13: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 | val total=(1+2)
  |             ^
  |
"
`;

exports[`command-line checker reports noncanonical subtraction formatting 1`] = `
"test/fixtures/subtraction-expression.qnt:2:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
2 | val delta=3-1
  | ^
  |
test/fixtures/subtraction-expression.qnt:2:10: error[format/equals-spacing]: expected one space around '='
  |
2 | val delta=3-1
  |          ^
  |
test/fixtures/subtraction-expression.qnt:2:12: error[format/binary-operator-spacing]: expected one space around '-'
  |
2 | val delta=3-1
  |            ^
  |
"
`;

exports[`command-line checker reports a compact module after a hashbang 1`] = `
"test/fixtures/hashbang.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker reports noncanonical multiple-module layout 1`] = `
"test/fixtures/multiple-modules.qnt:1:14: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module First {} module Second {}
  |              ^^
  |
test/fixtures/multiple-modules.qnt:1:17: error[format/module-separation]: expected one blank line between modules
  |
1 | module First {} module Second {}
  |                 ^^^^^^
  |
test/fixtures/multiple-modules.qnt:1:31: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module First {} module Second {}
  |                               ^^
  |
"
`;

exports[`command-line checker reports adjacent definitions without a blank line 1`] = `
"test/fixtures/definition-spacing.qnt:3:3: error[format/definition-spacing]: expected one blank line between definitions
  |
3 |   var second: int
  |   ^^^
  |
"
`;

exports[`command-line checker reports noncanonical leading line-comment formatting 1`] = `
"test/fixtures/leading-line-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // The answer
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/leading-line-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical documentation-comment formatting 1`] = `
"test/fixtures/documentation-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /// The answer
  | ^
  |
test/fixtures/documentation-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/documentation-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical block-comment formatting 1`] = `
"test/fixtures/block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /* The answer */
  | ^
  |
test/fixtures/block-comment.qnt:3:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
3 | val answer=42
  | ^
  |
test/fixtures/block-comment.qnt:3:11: error[format/equals-spacing]: expected one space around '='
  |
3 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical multiline block-comment formatting 1`] = `
"test/fixtures/multiline-block-comment.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | /*
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:1: error[format/module-body-indentation]: expected 2 spaces of indentation
  |
5 | val answer=42
  | ^
  |
test/fixtures/multiline-block-comment.qnt:5:11: error[format/equals-spacing]: expected one space around '='
  |
5 | val answer=42
  |           ^
  |
"
`;

exports[`command-line checker reports noncanonical module documentation-comment formatting 1`] = `
"test/fixtures/module-documentation-comment.qnt:1:1: error[format/comment-indentation]: expected no indentation at the source level
  |
1 |  /// Module documentation
  | ^
  |
test/fixtures/module-documentation-comment.qnt:2:16: error[format/empty-module]: empty module braces must be on separate lines
  |
2 | module Example {}
  |                ^^
  |
"
`;

exports[`command-line checker reports noncanonical trailing line-comment formatting 1`] = `
"test/fixtures/trailing-line-comment.qnt:2:18: error[format/comment-spacing]: expected one space before a trailing comment
  |
2 |   val answer = 42// The answer
  |                  ^^
  |
"
`;

exports[`command-line checker reports a misindented comment-only module 1`] = `
"test/fixtures/comment-only-module.qnt:2:1: error[format/comment-indentation]: expected 2 spaces of indentation
  |
2 | // Intentionally empty
  | ^
  |
"
`;

exports[`command-line checker reports noncanonical inline-comment formatting 1`] = `
"test/fixtures/inline-comment.qnt:2:16: error[format/comment-spacing]: expected one space before an inline comment
  |
2 |   val total = 1/* left */+2
  |                ^^
  |
test/fixtures/inline-comment.qnt:2:26: error[format/binary-operator-spacing]: expected one space around '+'
  |
2 |   val total = 1/* left */+2
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical general assumption formatting 1`] = `
"test/fixtures/assumption-expression.qnt:4:15: error[format/equals-spacing]: expected one space around '='
  |
4 |   assume Holds=Flag
  |               ^
  |
"
`;

exports[`command-line checker reports noncanonical parameterless def formatting 1`] = `
"test/fixtures/def-definition.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   def answer=42
  |             ^
  |
"
`;

exports[`command-line checker reports noncanonical def-parameter formatting 1`] = `
"test/fixtures/def-parameter.qnt:2:16: error[format/parameter-list-spacing]: expected no space after '('
  |
2 |   def identity( value )=value
  |                ^
  |
test/fixtures/def-parameter.qnt:2:22: error[format/parameter-list-spacing]: expected no space before ')'
  |
2 |   def identity( value )=value
  |                      ^
  |
test/fixtures/def-parameter.qnt:2:24: error[format/equals-spacing]: expected one space around '='
  |
2 |   def identity( value )=value
  |                        ^
  |
"
`;

exports[`command-line checker reports noncanonical ignored-parameter formatting 1`] = `
"test/fixtures/hole-parameter.qnt:2:19: error[format/parameter-list-spacing]: expected no space after '('
  |
2 |   pure def ignore( _: int ): int = 0
  |                   ^
  |
test/fixtures/hole-parameter.qnt:2:26: error[format/parameter-list-spacing]: expected no space before ')'
  |
2 |   pure def ignore( _: int ): int = 0
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical multiple-def-parameter formatting 1`] = `
"test/fixtures/multiple-def-parameters.qnt:2:19: error[format/parameter-separator-spacing]: expected ', ' between parameters
  |
2 |   def choose(left ,right)=left
  |                   ^
  |
test/fixtures/multiple-def-parameters.qnt:2:26: error[format/equals-spacing]: expected one space around '='
  |
2 |   def choose(left ,right)=left
  |                          ^
  |
"
`;

exports[`command-line checker reports noncanonical typed-def-header formatting 1`] = `
"test/fixtures/typed-def-header.qnt:2:21: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   def identity(value :int) :int=value
  |                     ^
  |
test/fixtures/typed-def-header.qnt:2:23: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   def identity(value :int) :int=value
  |                       ^
  |
test/fixtures/typed-def-header.qnt:2:27: error[format/type-colon-spacing]: expected no space before ':'
  |
2 |   def identity(value :int) :int=value
  |                           ^
  |
test/fixtures/typed-def-header.qnt:2:29: error[format/type-colon-spacing]: expected one space after ':'
  |
2 |   def identity(value :int) :int=value
  |                             ^
  |
test/fixtures/typed-def-header.qnt:2:32: error[format/equals-spacing]: expected one space around '='
  |
2 |   def identity(value :int) :int=value
  |                                ^
  |
"
`;

exports[`command-line checker reports noncanonical List-typed-header formatting 1`] = `
"test/fixtures/list-typed-header.qnt:2:25: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                         ^
  |
test/fixtures/list-typed-header.qnt:2:29: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                             ^
  |
test/fixtures/list-typed-header.qnt:2:39: error[format/type-delimiter-spacing]: expected no space after '['
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                                       ^
  |
test/fixtures/list-typed-header.qnt:2:43: error[format/type-delimiter-spacing]: expected no space before ']'
  |
2 |   def identity(xs: List[ int ]): List[ int ] = xs
  |                                           ^
  |
"
`;

exports[`command-line checker reports an optional definition semicolon 1`] = `
"test/fixtures/definition-semicolon.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   def answer=42;
  |             ^
  |
test/fixtures/definition-semicolon.qnt:2:16: error[format/unnecessary-semicolon]: optional semicolons are omitted
  |
2 |   def answer=42;
  |                ^
  |
"
`;

exports[`command-line checker reports noncanonical type-alias formatting 1`] = `
"test/fixtures/type-alias.qnt:2:13: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Count=int
  |             ^
  |
"
`;

exports[`command-line checker reports noncanonical uninterpreted-type formatting 1`] = `
"test/fixtures/uninterpreted-type.qnt:2:7: error[format/declaration-keyword-spacing]: expected one space after 'type'
  |
2 |   type   DOMAIN
  |       ^^^
  |
"
`;

exports[`command-line checker reports noncanonical named-type-alias formatting 1`] = `
"test/fixtures/named-type-alias.qnt:4:12: error[format/equals-spacing]: expected one space around '='
  |
4 |   type Copy=DOMAIN
  |            ^
  |
"
`;

exports[`command-line checker reports noncanonical polymorphic-type-alias formatting 1`] = `
"test/fixtures/polymorphic-type-alias.qnt:2:12: error[format/type-parameter-list-spacing]: expected no space after '['
  |
2 |   type Box[ a ]=List[a]
  |            ^
  |
test/fixtures/polymorphic-type-alias.qnt:2:14: error[format/type-parameter-list-spacing]: expected no space before ']'
  |
2 |   type Box[ a ]=List[a]
  |              ^
  |
test/fixtures/polymorphic-type-alias.qnt:2:16: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Box[ a ]=List[a]
  |                ^
  |
"
`;

exports[`command-line checker reports noncanonical type-application formatting 1`] = `
"test/fixtures/type-application.qnt:4:15: error[format/type-colon-spacing]: expected one space after ':'
  |
4 |   const boxes:Box[ int ]
  |               ^
  |
test/fixtures/type-application.qnt:4:19: error[format/type-delimiter-spacing]: expected no space after '['
  |
4 |   const boxes:Box[ int ]
  |                   ^
  |
test/fixtures/type-application.qnt:4:23: error[format/type-delimiter-spacing]: expected no space before ']'
  |
4 |   const boxes:Box[ int ]
  |                       ^
  |
"
`;

exports[`command-line checker reports noncanonical sum-type formatting 1`] = `
"test/fixtures/sum-type.qnt:2:12: error[format/equals-spacing]: expected one space around '='
  |
2 |   type Elem=S( str )|I( int )
  |            ^
  |
test/fixtures/sum-type.qnt:2:15: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   type Elem=S( str )|I( int )
  |               ^
  |
test/fixtures/sum-type.qnt:2:19: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   type Elem=S( str )|I( int )
  |                   ^
  |
test/fixtures/sum-type.qnt:2:21: error[format/type-separator-spacing]: expected one space around '|'
  |
2 |   type Elem=S( str )|I( int )
  |                     ^
  |
test/fixtures/sum-type.qnt:2:24: error[format/type-delimiter-spacing]: expected no space after '('
  |
2 |   type Elem=S( str )|I( int )
  |                        ^
  |
test/fixtures/sum-type.qnt:2:28: error[format/type-delimiter-spacing]: expected no space before ')'
  |
2 |   type Elem=S( str )|I( int )
  |                            ^
  |
"
`;

exports[`command-line checker reports noncanonical multiline-sum-type formatting 1`] = `
"test/fixtures/multiline-sum-type.qnt:3:1: error[format/sum-variant-indentation]: expected 4 spaces of indentation
  |
3 |   | Some( a )
  | ^^
  |
test/fixtures/multiline-sum-type.qnt:3:10: error[format/type-delimiter-spacing]: expected no space after '('
  |
3 |   | Some( a )
  |          ^
  |
test/fixtures/multiline-sum-type.qnt:3:12: error[format/type-delimiter-spacing]: expected no space before ')'
  |
3 |   | Some( a )
  |            ^
  |
test/fixtures/multiline-sum-type.qnt:4:1: error[format/sum-variant-indentation]: expected 4 spaces of indentation
  |
4 |    | None
  | ^^^
  |
"
`;

exports[`command-line checker reports noncanonical pure-definition formatting 1`] = `
"test/fixtures/pure-definition.qnt:2:7: error[format/qualifier-spacing]: expected one space after 'pure'
  |
2 |   pure   def answer=42
  |       ^^^
  |
test/fixtures/pure-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   pure   def answer=42
  |                    ^
  |
"
`;

exports[`command-line checker reports noncanonical pure-value formatting 1`] = `
"test/fixtures/pure-value-definition.qnt:2:7: error[format/qualifier-spacing]: expected one space after 'pure'
  |
2 |   pure   val answer=42
  |       ^^^
  |
test/fixtures/pure-value-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   pure   val answer=42
  |                    ^
  |
"
`;

exports[`command-line checker reports noncanonical action formatting 1`] = `
"test/fixtures/action-definition.qnt:2:20: error[format/equals-spacing]: expected one space around '='
  |
2 |   action initialize=true
  |                    ^
  |
"
`;

exports[`command-line checker reports noncanonical run formatting 1`] = `
"test/fixtures/run-definition.qnt:2:15: error[format/equals-spacing]: expected one space around '='
  |
2 |   run scenario=true
  |               ^
  |
"
`;

exports[`command-line checker reports noncanonical temporal formatting 1`] = `
"test/fixtures/temporal-definition.qnt:2:21: error[format/equals-spacing]: expected one space around '='
  |
2 |   temporal invariant=true
  |                     ^
  |
"
`;

exports[`command-line checker reports noncanonical nondet formatting 1`] = `
"test/fixtures/nondet-definition.qnt:2:19: error[format/equals-spacing]: expected one space around '='
  |
2 |   nondet selection=true
  |                   ^
  |
"
`;
